--- a/BST/CMakeLists.txt
+++ b/BST/CMakeLists.txt
@@ -3,5 +3,9 @@ project(BST)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES
+        binarySearch.h
+        BST.h
+        main.cpp)
+
 add_executable(BST ${SOURCE_FILES})
